@@ -1,5 +1,9 @@
 THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.
 
+PL-v0.6.1
+ - FIX: fixed the height of the HTML pre element on the pattern detail view
+ - ADD: added in support for viewing the generated CSS on the pattern detail view
+
 PL-v0.6.0
  - ADD: a UI list of the current media query widths from the CSS
  - ADD: a pattern's "lineage" now displays in the UI under code view
